--- a/index.html
+++ b/index.html
@@ -2,108 +2,84 @@
 <html>
 
 <head>
-    <title>History of the Web</title>
-    <meta name="viewport" content="width=device-width, initial-scale=0.4">
-    <link rel="stylesheet" href="stylesheet.css">
+	<title>History of the Web</title>
+	<meta name="viewport" content="width=device-width, initial-scale=0.4">
+	<link href="style.css" rel="stylesheet">
+	<script src="script.js" defer>
+
+	</script>
 </head>
 
 <body>
-    <h1>History of the Web</h1>
+	<h1>History of the Web</h1>
 
-    <div id="slide1" class="item">
-        <h2>1989</h2>
-        <img src="berners-lee.jpg">
-        <p>
-            While working at CERN in Switzerland, the English physicist Tim Berners-Lee wrote a proposal for &quot;a large hypertext database with typed links&quot;. Although the proposal attracted little interest, Berners-Lee was encouraged by his boss, Mike Sendall,
-            to begin implementing his system on a newly acquired NeXT workstation. He considered several names, including Information Mesh, The Information Mine, and Mine of Information, but settled on World Wide Web.
-        </p>
-        <div>
-            Source: <a href="https://en.wikipedia.org/wiki/History_of_the_World_Wide_Web" target="_blank">History of the World Wide Web</a>
-        </div>
-    </div>
+	<div class="slide" id="slide1">
+		<h2>1989</h2>
+		<img src="berners-lee.jpg">
+    <p>
+      While working at CERN in Switzerland, the English physicist Tim Berners-Lee wrote a proposal for &quot;a large hypertext database with typed links&quot;. Although the proposal attracted little interest, Berners-Lee was encouraged by his boss, Mike Sendall, to begin implementing his system on a newly acquired NeXT workstation. He considered several names, including Information Mesh, The Information Mine, and Mine of Information, but settled on World Wide Web.
+    </p>
+  </div>
 
-    <div id="slide2" class="item">
-        <h2>1990</h2>
-        <img src="first-web-browser.png">
-        <p>
-            Tim Berners-Lee built all the tools necessary for a working web: the HyperText Transfer Protocol (HTTP), the HyperText Markup Language (HTML), the first web browser (named WorldWideWeb), the first HTTP server software (later known as CERN httpd), the
-            first web server, and the first web pages that described the project itself.
-        </p>
-        <div>
-            Source: <a href="https://en.wikipedia.org/wiki/History_of_the_World_Wide_Web" target="_blank">History of the World Wide Web</a>
-        </div>
-    </div>
+  <div class="slide" id="slide2">
+    <h2>1990</h2>
+    <img src="first-web-browser.png">
+    <p>
+      Tim Berners-Lee built all the tools necessary for a working web: the HyperText Transfer Protocol (HTTP), the HyperText Markup Language (HTML), the first web browser (named WorldWideWeb), the first HTTP server software (later known as CERN httpd), the first web server, and the first web pages that described the project itself.
+    </p>
+  </div>
 
-    <div id="slide3" class="item">
-        <h2>1993</h2>
-        <img src="mosaic.png">
-        <p>
-            Marc Andreessen's team at the University of Illinois launched Mosaic, a graphical web browser that popularized the web. The browser gained popularity due to its strong support of integrated multimedia, and the authors' rapid response to user bug reports
-            and recommendations for new features.
-        </p>
-        <div>
-            Source: <a href="https://en.wikipedia.org/wiki/History_of_the_World_Wide_Web" target="_blank">History of the World Wide Web</a>
-        </div>
-    </div>
+  <div class="slide" id="slide3">
+    <h2>1993</h2>
+    <img src="mosaic.png">
+    <p>
+      Marc Andreessen's team at the University of Illinois launched Mosaic, a graphical web browser that popularized the web. The browser gained popularity due to its strong support of integrated multimedia, and the authors' rapid response to user bug reports and recommendations for new features.
+    </p>
+  </div>
 
-    <div id="slide4" class="item">
-        <h2>1994</h2>
-        <img src="w3c.jpg">
-        <p>
-            Tim Berners-Lee founded the World Wide Web Consortium (W3C) at the Massachusetts Institute of Technology. It comprised various companies that were willing to create standards and recommendations to improve the quality of the web. Berners-Lee made the
-            web available freely, with no patent and no royalties due. The W3C decided that its standards must be based on royalty-free technology, so they can be easily adopted by anyone.
-        </p>
-        <div>
-            Source: <a href="https://en.wikipedia.org/wiki/History_of_the_World_Wide_Web" target="_blank">History of the World Wide Web</a>
-        </div>
-    </div>
+  <div class="slide" id="slide4">
+    <h2>1994</h2>
+    <img src="w3c.jpg">
+    <p>
+      Tim Berners-Lee founded the World Wide Web Consortium (W3C) at the Massachusetts Institute of Technology. It comprised various companies that were willing to create standards and recommendations to improve the quality of the web. Berners-Lee made the web available freely, with no patent and no royalties due. The W3C decided that its standards must be based on royalty-free technology, so they can be easily adopted by anyone.
+    </p>
+  </div>
 
-    <div id="slide5" class="item">
-        <h2>1998</h2>
-        <img src="google.jpg">
-        <p>
-            Two Ph.D. students at Stanford, Larry Page and Sergey Brin, founded Google.
-        </p>
-        <div>
-            Source: <a href="https://en.wikipedia.org/wiki/Google" target="_blank">Google</a>
-        </div>
-    </div>
+  <div class="slide" id="slide5">
+    <h2>1998</h2>
+    <img src="google.jpg">
+    <p>
+      Two Ph.D. students at Stanford, Larry Page and Sergey Brin, founded Google.
+    </p>
+  </div>
 
-    <div id="slide6" class="item">
-        <h2>2004</h2>
-        <img src="facebook.jpg">
-        <p>
-            Five undergraduate students at Harvard, Mark Zuckerberg, Eduardo Saverin, Andrew McCollum, Dustin Moskovitz, and Chris Hughes, founded Facebook.
-        </p>
-        <div>
-            Source: <a href="https://en.wikipedia.org/wiki/Facebook" target="_blank">Facebook</a>
-        </div>
-    </div>
+  <div class="slide" id="slide6">
+    <h2>2004</h2>
+    <img src="facebook.jpg">
+    <p>
+      Five undergraduate students at Harvard, Mark Zuckerberg, Eduardo Saverin, Andrew McCollum, Dustin Moskovitz, and Chris Hughes, founded Facebook.
+    </p>
+  </div>
 
-    <div id="slide7" class="item">
-        <h2>2005</h2>
-        <img src="youtube.jpg">
-        <p>
-            Three PayPal employees, Steve Chen, Chad Hurley, and Jawed Karim, founded YouTube.
-        </p>
-        <div>
-            Source: <a href="https://en.wikipedia.org/wiki/YouTube" target="_blank">YouTube</a>
-        </div>
-    </div>
+  <div class="slide" id="slide7">
+    <h2>2005</h2>
+    <img src="youtube.jpg">
+    <p>
+      Three PayPal employees, Steve Chen, Chad Hurley, and Jawed Karim, founded YouTube.
+    </p>
+  </div>
 
-    <input id="timeline" type="range" min="1" max="7" value="1">
+  <input type="range" min="1" max="7" value="1" id="slider">
 
-    <div>
-        <div class="year">1989</div>
-        <div class="year">1990</div>
-        <div class="year">1993</div>
-        <div class="year">1994</div>
-        <div class="year">1998</div>
-        <div class="year">2004</div>
-        <div class="year">2005</div>
-    </div>
-
-    <script src="script.js"></script>
+  <div>
+    <div class="year">1989</div>
+    <div class="year">1990</div>
+    <div class="year">1993</div>
+    <div class="year">1994</div>
+    <div class="year">1998</div>
+    <div class="year">2004</div>
+    <div class="year">2005</div>
+  </div>
 </body>
 
 </html>
